config(pom): tests re-enabled